plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id 'java'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
    maven {
        name = "Fabric"
        url = "https://maven.fabricmc.net/"
    }
    maven {
        name = "Terraformers"
        url = "https://maven.terraformersmc.com/releases/"
    }
    maven {
        name = "Shedaniel"
        url = "https://maven.shedaniel.me/"
    }
}

loom {
    splitEnvironmentSourceSets()

    mods {
        mam {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }

    runs {
        client {
            configName = "Minecraft Client"
            runDir = "run"
        }

        server {
            configName = "Minecraft Server"
            runDir = "run-server"
        }
    }
}

// Configure data generation
fabricApi {
    configureDataGeneration {
        client = true
    }
}

dependencies {
    // Minecraft & Fabric
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // Optional Integrations
    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
        exclude group: "net.fabricmc.fabric-api"
    }

    // Libraries (bundled with mod)
    include implementation("com.google.code.gson:gson:${project.gson_version}")

    // Compile-only annotations
    compileOnly "org.jetbrains:annotations:${project.annotations_version}"

    // Testing Framework - JUnit Jupiter 6.0.1 (Minimal Setup)
    testImplementation "org.junit.jupiter:junit-jupiter-api:${project.junit_version}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${project.junit_version}"
}

sourceSets {
    main {
        resources {
            srcDirs += [
                "src/main/generated/resources"
            ]
            exclude ".cache"
        }
    }
    test {
        java {
            srcDirs = ["src/test/java"]
        }
        resources {
            srcDirs = ["src/test/resources"]
        }
    }
}

processResources {
    inputs.property "version", project.version
    inputs.property "mod_id", project.mod_id
    inputs.property "mod_name", project.mod_name
    inputs.property "mod_description", project.mod_description
    inputs.property "mod_author", project.mod_author
    inputs.property "mod_license", project.mod_license
    inputs.property "mod_version", project.mod_version
    inputs.property "mod_homepage", project.mod_homepage
    inputs.property "mod_sources", project.mod_sources
    inputs.property "mod_issues", project.mod_issues
    inputs.property "loader_version", project.loader_version
    inputs.property "minecraft_version", project.minecraft_version

    filesMatching("fabric.mod.json") {
        expand([
            "version": project.version,
            "mod_id": project.mod_id,
            "mod_name": project.mod_name,
            "mod_description": project.mod_description,
            "mod_author": project.mod_author,
            "mod_license": project.mod_license,
            "mod_version": project.mod_version,
            "mod_homepage": project.mod_homepage,
            "mod_sources": project.mod_sources,
            "mod_issues": project.mod_issues,
            "loader_version": project.loader_version,
            "minecraft_version": project.minecraft_version
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 21
    it.options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation"]
}

java {
    withSourcesJar()
    withJavadocJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}" }
    }

    manifest {
        attributes([
            "Specification-Title": project.mod_name,
            "Specification-Vendor": project.mod_author,
            "Specification-Version": "1",
            "Implementation-Title": project.mod_name,
            "Implementation-Version": project.version,
            "Implementation-Vendor": project.mod_author,
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

javadoc {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
}

// Enhanced test task configuration for JUnit 6
test {
    useJUnitPlatform {
        // Include all test packages
        includeTags 'fast', 'slow', 'integration'

        // Enable parallel execution
        systemProperty 'junit.jupiter.execution.parallel.enabled', 'true'
        systemProperty 'junit.jupiter.execution.parallel.mode.default', 'concurrent'
        systemProperty 'junit.jupiter.execution.parallel.mode.classes.default', 'concurrent'
    }

    // Test performance configuration
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
    forkEvery = 100

    // JVM arguments for test execution
    jvmArgs = [
        '-Xmx2G',
        '-XX:+UseG1GC',
        '-XX:MaxGCPauseMillis=100'
    ]

    // Enhanced test logging
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        exceptionFormat = "full"
        showExceptions = true
        showCauses = true
        showStackTraces = true
        showStandardStreams = false

        // Display test counts
        afterSuite { desc, result ->
            if (!desc.parent) {
                println "\n${result.resultType} " +
                    "(${result.testCount} tests, " +
                    "${result.successfulTestCount} passed, " +
                    "${result.failedTestCount} failed, " +
                    "${result.skippedTestCount} skipped)"
            }
        }
    }

    // Generate test reports
    reports {
        html.required = true
        junitXml.required = true
    }
}

// Task to run only fast tests
tasks.register('fastTest', Test) {
    useJUnitPlatform {
        includeTags 'fast'
    }
    shouldRunAfter test
}

// Task to run integration tests
tasks.register('integrationTest', Test) {
    useJUnitPlatform {
        includeTags 'integration'
    }
    shouldRunAfter test
}

// Publishing configuration
publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = project.archives_base_name
            from components.java

            pom {
                name = project.mod_name
                description = project.mod_description
                url = project.mod_homepage

                licenses {
                    license {
                        name = project.mod_license
                    }
                }

                developers {
                    developer {
                        name = project.mod_author
                    }
                }

                scm {
                    url = project.mod_sources
                    connection = "scm:git:${project.mod_sources}.git"
                }
            }
        }
    }

    repositories {
        // Uncomment to publish to local Maven repository
        // mavenLocal()
    }
}

// Clean generated resources
clean {
    delete "src/main/generated"
}

// Task to display project info
task projectInfo {
    doLast {
        println "======================================"
        println "Arcane Magic System - Mana and Magic"
        println "======================================"
        println "Mod Name:       ${project.mod_name}"
        println "Version:        ${project.version}"
        println "Minecraft:      ${project.minecraft_version}"
        println "Fabric Loader:  ${project.loader_version}"
        println "Fabric API:     ${project.fabric_version}"
        println "Java Version:   ${JavaVersion.current()}"
        println "Gradle Version: ${gradle.gradleVersion}"
        println "Loom Version:   ${project.loom_version}"
        println "JUnit:          ${project.junit_version}"
        println "======================================"
    }
}
